# printer_utility

./: .gitmodules  CMakeLists.txt  library.h
cli/: main.cpp
includes/: output_formats.h  printer.h  printers.h
src/: printers.cpp
vendors/cclip/includes/: options_manager.h
vendors/cclip/lib/: cclip-d.lib  cclip.lib
